# cric-db

./: README.md  pyproject.toml
cric_db/: cricsheet_db.py
